--- a/css/styles.css
+++ b/css/styles.css
@@ -163,8 +163,8 @@ a:focus {
 .moo-ui-form .moo-field:first-child {
   border-top: none;
 }
-/* line 21, ../_source/css/sass/_mootor.ui.scss */
-.moo-ui-form label {
+/* line 20, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-field > label, .moo-ui-form .moo-field legend {
   display: inline;
   float: left;
   font-size: 2em;
@@ -234,54 +234,61 @@ a:focus {
   text-decoration: none;
   display: block;
   height: 100%;
-  padding: 0 1em;
+  padding: 0 0.5em;
   position: relative;
   right: 0;
+  z-index: 10;
 }
-/* line 82, ../_source/css/sass/_mootor.ui.scss */
-.moo-ui-form .moo-ui-select-container .moo-ui-select-link:before {
+/* line 83, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-select-container .moo-ui-select-link:after {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #cccccc));
   background: -webkit-linear-gradient(top, #ffffff, #cccccc);
   background: -moz-linear-gradient(top, #ffffff, #cccccc);
   background: -o-linear-gradient(top, #ffffff, #cccccc);
   background: -ms-linear-gradient(top, #ffffff, #cccccc);
   background: linear-gradient(top, #ffffff, #cccccc);
+  border-top: 1px solid #666;
+  border-right: 1px solid #666;
+  border-bottom: 1px solid #666;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   content: " ";
   display: block;
   position: absolute;
-  top: -1px;
-  right: -1px;
-  width: 2.5em;
-  height: 2.5em;
+  top: -0.25em;
+  right: -0.25em;
+  width: 2.25em;
+  height: 2.25em;
+  z-index: -1;
 }
-/* line 94, ../_source/css/sass/_mootor.ui.scss */
+/* line 101, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-menu {
   background-color: #999;
   border-radius: 5px;
   padding: 1em;
   position: absolute;
 }
-/* line 100, ../_source/css/sass/_mootor.ui.scss */
+/* line 107, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list {
   font-size: 2em;
   background: #FFF;
   border-radius: 5px;
   overflow: auto;
 }
-/* line 106, ../_source/css/sass/_mootor.ui.scss */
+/* line 113, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li {
   padding: 1em;
   border-bottom: 1px solid #CCC;
 }
-/* line 109, ../_source/css/sass/_mootor.ui.scss */
+/* line 116, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li:last-child {
   border: none;
 }
-/* line 113, ../_source/css/sass/_mootor.ui.scss */
+/* line 120, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu {
   top: 4.5em;
 }
-/* line 115, ../_source/css/sass/_mootor.ui.scss */
+/* line 122, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu:before {
   content: "";
   display: block;
@@ -293,11 +300,11 @@ a:focus {
   border-right: 20px solid transparent;
   border-bottom: 15px solid #999;
 }
-/* line 129, ../_source/css/sass/_mootor.ui.scss */
+/* line 136, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu {
   bottom: 4.5em;
 }
-/* line 131, ../_source/css/sass/_mootor.ui.scss */
+/* line 138, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu:after {
   content: "";
   display: block;
@@ -309,7 +316,7 @@ a:focus {
   border-right: 2em solid transparent;
   border-top: 1.5em solid #999;
 }
-/* line 145, ../_source/css/sass/_mootor.ui.scss */
+/* line 152, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .cleanbox {
   display: block;
   padding: 0.35em;
@@ -321,8 +328,120 @@ a:focus {
   font-weight: 700;
   text-decoration: none;
 }
+/* line 163, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio {
+  display: inline;
+  float: right;
+  position: relative;
+  width: 75%;
+}
+/* line 167, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio input {
+  position: absolute;
+  top: 0.5em;
+  left: 0.5em;
+}
+/* line 172, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio label {
+  position: relative;
+  display: block;
+  padding: 0.5em 0.5em 0.5em 2em;
+  background: #FFF;
+  font-size: 1.4em;
+}
+/* line 178, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon {
+  display: block;
+  position: absolute;
+  left: 0.5em;
+  top: 0.5em;
+  background-color: #CCC;
+  border: 1px solid #999;
+  border-radius: 8px;
+  width: 1em;
+  height: 1em;
+}
+/* line 188, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active {
+  background-color: #A6C9FD;
+}
+/* line 190, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0.2em;
+  left: 0.2em;
+  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 6, color-stop(0%, #ffffff), color-stop(100%, #a6c9fd));
+  background: -webkit-radial-gradient(#ffffff, #a6c9fd 6px);
+  background: -moz-radial-gradient(#ffffff, #a6c9fd 6px);
+  background: -o-radial-gradient(#ffffff, #a6c9fd 6px);
+  background: -ms-radial-gradient(#ffffff, #a6c9fd 6px);
+  background: radial-gradient(#ffffff, #a6c9fd 6px);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 0 2px 2px #666666;
+  -moz-box-shadow: 0 0 2px 2px #666666;
+  box-shadow: 0 0 2px 2px #666666;
+  width: 0.6em;
+  height: 0.6em;
+}
+/* line 206, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox {
+  display: inline;
+  float: right;
+  position: relative;
+  width: 75%;
+}
+/* line 210, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox input {
+  position: absolute;
+  top: 0.5em;
+  left: 0.5em;
+}
+/* line 215, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox label {
+  position: relative;
+  display: block;
+  padding: 0.5em 0.5em 0.5em 2em;
+  background: #FFF;
+  font-size: 1.4em;
+}
+/* line 221, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon {
+  display: block;
+  position: absolute;
+  left: 0.5em;
+  top: 0.5em;
+  background-color: #CCC;
+  border: 1px solid #999;
+  width: 1em;
+  height: 1em;
+}
+/* line 230, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active {
+  background-color: #72AAFB;
+}
+/* line 232, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 0.2em;
+  left: 0.2em;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #bdd7fd));
+  background: -webkit-linear-gradient(top, #ffffff, #bdd7fd);
+  background: -moz-linear-gradient(top, #ffffff, #bdd7fd);
+  background: -o-linear-gradient(top, #ffffff, #bdd7fd);
+  background: -ms-linear-gradient(top, #ffffff, #bdd7fd);
+  background: linear-gradient(top, #ffffff, #bdd7fd);
+  -webkit-box-shadow: 0 0 2px 2px #666666;
+  -moz-box-shadow: 0 0 2px 2px #666666;
+  box-shadow: 0 0 2px 2px #666666;
+  width: 0.6em;
+  height: 0.6em;
+}
 
-/* line 161, ../_source/css/sass/_mootor.ui.scss */
+/* line 252, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox {
   display: block;
   height: 28px;
@@ -330,7 +449,7 @@ a:focus {
   overflow: hidden;
   float: right;
 }
-/* line 168, ../_source/css/sass/_mootor.ui.scss */
+/* line 259, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox b {
   -webkit-transition-duration: .25s;
   background: url(../img/ui/switch.png);
@@ -339,16 +458,16 @@ a:focus {
   display: block;
   -webkit-transform: translate3d(0, 0, 0);
 }
-/* line 177, ../_source/css/sass/_mootor.ui.scss */
+/* line 268, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox.off b {
   -webkit-transform: translate3d(-54px, 0, 0);
 }
-/* line 180, ../_source/css/sass/_mootor.ui.scss */
+/* line 271, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox label {
   line-height: 28px;
 }
 
-/* line 186, ../_source/css/sass/_mootor.ui.scss */
+/* line 277, ../_source/css/sass/_mootor.ui.scss */
 .moo_tooltip {
   position: absolute;
   line-height: 140%;
