css multiple select

--- a/css/styles.css
+++ b/css/styles.css
@@ -153,17 +153,17 @@ a:focus {
   border: 1px solid #CCC;
   border-radius: 5px;
 }
-/* line 13, ../_source/css/sass/_mootor.ui.scss */
+/* line 12, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-field {
   display: block;
   padding: 1em 2em;
   border-top: 1px solid #CCC;
 }
-/* line 19, ../_source/css/sass/_mootor.ui.scss */
+/* line 17, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-field:first-child {
   border-top: none;
 }
-/* line 20, ../_source/css/sass/_mootor.ui.scss */
+/* line 18, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-field > label, .moo-ui-form .moo-field legend {
   display: inline;
   float: left;
@@ -171,7 +171,7 @@ a:focus {
   font-weight: 700;
   width: 25%;
 }
-/* line 27, ../_source/css/sass/_mootor.ui.scss */
+/* line 25, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-text {
   display: inline;
   float: right;
@@ -182,7 +182,7 @@ a:focus {
   padding: 0.25em 2.25em 0.25em 0.25em;
   width: 75%;
 }
-/* line 35, ../_source/css/sass/_mootor.ui.scss */
+/* line 33, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-text input {
   -webkit-appearance: none;
   /* Remove default iOS shadow */
@@ -192,7 +192,7 @@ a:focus {
   line-height: 1.5em;
   width: 100%;
 }
-/* line 44, ../_source/css/sass/_mootor.ui.scss */
+/* line 42, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-textarea {
   display: inline;
   float: right;
@@ -203,7 +203,7 @@ a:focus {
   padding: 0.25em;
   width: 75%;
 }
-/* line 52, ../_source/css/sass/_mootor.ui.scss */
+/* line 50, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-textarea textarea {
   -webkit-appearance: none;
   /* Remove default iOS shadow */
@@ -213,7 +213,7 @@ a:focus {
   line-height: 1.5em;
   width: 100%;
 }
-/* line 62, ../_source/css/sass/_mootor.ui.scss */
+/* line 60, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container {
   display: inline;
   float: right;
@@ -224,8 +224,9 @@ a:focus {
   padding: 0.25em 0.25em 0.25em 0.25em;
   width: 75%;
   height: 3em;
+  z-index: 300;
 }
-/* line 71, ../_source/css/sass/_mootor.ui.scss */
+/* line 70, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-link {
   color: #000;
   font-size: 1.25em;
@@ -239,7 +240,7 @@ a:focus {
   right: 0;
   z-index: 10;
 }
-/* line 83, ../_source/css/sass/_mootor.ui.scss */
+/* line 82, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-link:after {
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ffffff), color-stop(100%, #cccccc));
   background: -webkit-linear-gradient(top, #ffffff, #cccccc);
@@ -261,34 +262,47 @@ a:focus {
   height: 2.25em;
   z-index: -1;
 }
-/* line 101, ../_source/css/sass/_mootor.ui.scss */
+/* line 99, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-menu {
   background-color: #999;
   border-radius: 5px;
   padding: 1em;
   position: absolute;
 }
-/* line 107, ../_source/css/sass/_mootor.ui.scss */
+/* line 105, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list {
   font-size: 2em;
   background: #FFF;
   border-radius: 5px;
   overflow: auto;
 }
-/* line 113, ../_source/css/sass/_mootor.ui.scss */
+/* line 110, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li {
   padding: 1em;
   border-bottom: 1px solid #CCC;
+  white-space: nowrap;
 }
-/* line 116, ../_source/css/sass/_mootor.ui.scss */
+/* line 114, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container .moo-ui-select-list li:last-child {
   border: none;
 }
-/* line 120, ../_source/css/sass/_mootor.ui.scss */
+/* line 115, ../_source/css/sass/_mootor.ui.scss */
+.moo-ui-form .moo-ui-select-container .moo-ui-select-list li.selected {
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #daeaec), color-stop(100%, #cee3e6));
+  background: -webkit-linear-gradient(top, #daeaec, #cee3e6);
+  background: -moz-linear-gradient(top, #daeaec, #cee3e6);
+  background: -o-linear-gradient(top, #daeaec, #cee3e6);
+  background: -ms-linear-gradient(top, #daeaec, #cee3e6);
+  background: linear-gradient(top, #daeaec, #cee3e6);
+  border-top-color: #AEBBBD;
+  border-bottom-color: #AEBBBD;
+  color: #3F8D94;
+}
+/* line 124, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu {
   top: 4.5em;
 }
-/* line 122, ../_source/css/sass/_mootor.ui.scss */
+/* line 126, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.bottom .moo-ui-select-menu:before {
   content: "";
   display: block;
@@ -300,11 +314,11 @@ a:focus {
   border-right: 20px solid transparent;
   border-bottom: 15px solid #999;
 }
-/* line 136, ../_source/css/sass/_mootor.ui.scss */
+/* line 140, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu {
   bottom: 4.5em;
 }
-/* line 138, ../_source/css/sass/_mootor.ui.scss */
+/* line 142, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-select-container.top .moo-ui-select-menu:after {
   content: "";
   display: block;
@@ -316,7 +330,7 @@ a:focus {
   border-right: 2em solid transparent;
   border-top: 1.5em solid #999;
 }
-/* line 152, ../_source/css/sass/_mootor.ui.scss */
+/* line 156, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .cleanbox {
   display: block;
   padding: 0.35em;
@@ -328,20 +342,20 @@ a:focus {
   font-weight: 700;
   text-decoration: none;
 }
-/* line 163, ../_source/css/sass/_mootor.ui.scss */
+/* line 167, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 167, ../_source/css/sass/_mootor.ui.scss */
+/* line 171, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 172, ../_source/css/sass/_mootor.ui.scss */
+/* line 176, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label {
   position: relative;
   display: block;
@@ -349,7 +363,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 178, ../_source/css/sass/_mootor.ui.scss */
+/* line 182, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon {
   display: block;
   position: absolute;
@@ -361,11 +375,11 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 188, ../_source/css/sass/_mootor.ui.scss */
+/* line 192, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active {
-  background-color: #A6C9FD;
+  background-color: #666;
 }
-/* line 190, ../_source/css/sass/_mootor.ui.scss */
+/* line 194, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-radio label .moo-ui-radio-icon.moo-radio-active:after {
   content: " ";
   display: block;
@@ -385,20 +399,20 @@ a:focus {
   width: 0.6em;
   height: 0.6em;
 }
-/* line 206, ../_source/css/sass/_mootor.ui.scss */
+/* line 210, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox {
   display: inline;
   float: right;
   position: relative;
   width: 75%;
 }
-/* line 210, ../_source/css/sass/_mootor.ui.scss */
+/* line 214, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox input {
   position: absolute;
   top: 0.5em;
   left: 0.5em;
 }
-/* line 215, ../_source/css/sass/_mootor.ui.scss */
+/* line 219, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label {
   position: relative;
   display: block;
@@ -406,7 +420,7 @@ a:focus {
   background: #FFF;
   font-size: 1.4em;
 }
-/* line 221, ../_source/css/sass/_mootor.ui.scss */
+/* line 225, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon {
   display: block;
   position: absolute;
@@ -417,11 +431,11 @@ a:focus {
   width: 1em;
   height: 1em;
 }
-/* line 230, ../_source/css/sass/_mootor.ui.scss */
+/* line 234, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active {
-  background-color: #72AAFB;
+  background-color: #666;
 }
-/* line 232, ../_source/css/sass/_mootor.ui.scss */
+/* line 236, ../_source/css/sass/_mootor.ui.scss */
 .moo-ui-form .moo-ui-checkbox label .moo-ui-checkbox-icon.moo-checkbox-active:after {
   content: " ";
   display: block;
@@ -441,7 +455,7 @@ a:focus {
   height: 0.6em;
 }
 
-/* line 252, ../_source/css/sass/_mootor.ui.scss */
+/* line 256, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox {
   display: block;
   height: 28px;
@@ -449,7 +463,7 @@ a:focus {
   overflow: hidden;
   float: right;
 }
-/* line 259, ../_source/css/sass/_mootor.ui.scss */
+/* line 263, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox b {
   -webkit-transition-duration: .25s;
   background: url(../img/ui/switch.png);
@@ -458,16 +472,16 @@ a:focus {
   display: block;
   -webkit-transform: translate3d(0, 0, 0);
 }
-/* line 268, ../_source/css/sass/_mootor.ui.scss */
+/* line 272, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox.off b {
   -webkit-transform: translate3d(-54px, 0, 0);
 }
-/* line 271, ../_source/css/sass/_mootor.ui.scss */
+/* line 275, ../_source/css/sass/_mootor.ui.scss */
 .moo_checkbox label {
   line-height: 28px;
 }
 
-/* line 277, ../_source/css/sass/_mootor.ui.scss */
+/* line 281, ../_source/css/sass/_mootor.ui.scss */
 .moo_tooltip {
   position: absolute;
   line-height: 140%;
